--- a/game-manifest.json
+++ b/game-manifest.json
@@ -2,6 +2,6 @@
     {
         "name": "3D模拟飞行",
         "file": "3D-flight.html",
-        "description": "基于scratch的3D模拟飞行引擎",
-    },
+        "description": "基于scratch的3D模拟飞行引擎"
+    }
 ]
