--- a/game-manifest.json
+++ b/game-manifest.json
@@ -2,11 +2,13 @@
     {
         "name": "3D模拟飞行",
         "file": "3D-flight.html",
-        "description": "基于scratch的3D模拟飞行引擎"
+        "description": "基于scratch的3D模拟飞行引擎",
+        "thumbnail": "assets/snooker-thumb.jpg"
     },
     {
         "name": "3D斯诺克台球",
         "file": "snooker/index.html",
         "description": "来自Blue-Flag-666/Snooker"
+        "thumbnail": "assets/snooker-thumb.jpg"
     }
 ]
