--- a/game-manifest.json
+++ b/game-manifest.json
@@ -3,7 +3,7 @@
         "name": "3D模拟飞行",
         "file": "3D-flight.html",
         "description": "基于scratch的3D模拟飞行引擎",
-        "thumbnail": "assets/snooker-thumb.jpg"
+        "thumbnail": "assets/sd-flight-thumb.jpg"
     },
     {
         "name": "3D斯诺克台球",
