--- a/game-manifest.json
+++ b/game-manifest.json
@@ -8,7 +8,7 @@
     {
         "name": "3D斯诺克台球",
         "file": "snooker/index.html",
-        "description": "来自Blue-Flag-666/Snooker"
+        "description": "来自Blue-Flag-666/Snooker",
         "thumbnail": "assets/snooker-thumb.jpg"
     }
 ]
