--- a/game-manifest.json
+++ b/game-manifest.json
@@ -3,12 +3,12 @@
         "name": "3D模拟飞行",
         "file": "3D-flight.html",
         "description": "基于scratch的3D模拟飞行引擎",
-        "thumbnail": "assets/3D-flight-thumb.jpg"
+        "thumbnail": "3D-flight-thumb.jpg"
     },
     {
         "name": "3D斯诺克台球",
         "file": "snooker/index.html",
         "description": "来自Blue-Flag-666/Snooker",
-        "thumbnail": "assets/snooker-thumb.jpg"
+        "thumbnail": "snooker-thumb.jpg"
     }
 ]
