--- a/game-manifest.json
+++ b/game-manifest.json
@@ -11,4 +11,10 @@
         "description": "来自Blue-Flag-666/Snooker",
         "thumbnail": "snooker-thumb.jpg"
     }
+    {
+        "name": "Appel v1.4",
+        "file": "appel_v1.4.html",
+        "description": "来自scratch，[Af]汉化",
+        "thumbnail": ""
+    }
 ]
