--- a/game-manifest.json
+++ b/game-manifest.json
@@ -13,7 +13,7 @@
     },
     {
         "name": "Appel v1.4",
-        "file": "appel v1.4.html",
+        "file": "appel_v1.4.html",
         "description": "来自scratch，[Af]汉化",
         "thumbnail": ""
     }
